--- a/OpenGLPruebas.vcxproj
+++ b/OpenGLPruebas.vcxproj
@@ -144,6 +144,10 @@
   <ItemGroup>
     <ClInclude Include="logger.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="default.frag" />
+    <None Include="default.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
