--- a/OpenGLPruebas.vcxproj.filters
+++ b/OpenGLPruebas.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image_loader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logger.h">
@@ -50,6 +53,18 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="triangle2.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="default.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="default.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="texture.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="texture.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
