--- a/OpenGLPruebas.vcxproj
+++ b/OpenGLPruebas.vcxproj
@@ -141,7 +141,6 @@
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="IndexBuffer.cpp" />
-    <ClCompile Include="logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -149,6 +148,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
+    <ClCompile Include="WindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -158,11 +158,11 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="VertexBufferLayout.h" />
     <ClInclude Include="IndexBuffer.h" />
-    <ClInclude Include="logger.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="VertexArray.h" />
     <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="WindowManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag" />
