POR FIN COMPILA

--- a/OpenGLPruebas.vcxproj.filters
+++ b/OpenGLPruebas.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pruebas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
