--- a/OpenGLPruebas.vcxproj
+++ b/OpenGLPruebas.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Pruebas.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stb_image_loader.cpp" />
     <ClCompile Include="Texture.cpp" />
