--- a/OpenGLPruebas.vcxproj.filters
+++ b/OpenGLPruebas.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MeshData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="triangles.vert">
