--- a/OpenGLPruebas.vcxproj.filters
+++ b/OpenGLPruebas.vcxproj.filters
@@ -133,5 +133,6 @@
     <None Include="triangle2.frag">
       <Filter>res\shaders</Filter>
     </None>
+    <None Include="light.frag" />
   </ItemGroup>
 </Project>
